对接成功了一部分

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -6,7 +6,7 @@
     <title>致病性变异预测系统</title> 
     
     <!-- 确保 favicon 路径正确 -->
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/static/favicon.ico">
 
   </head>
   <body>
@@ -16,6 +16,6 @@
     </div>
     
     <!-- 确保脚本路径正确 -->
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/static/js/main.js"></script>
   </body>
 </html>
